fix: depot monitor and map width flicker

--- a/src/style.css
+++ b/src/style.css
@@ -31,7 +31,7 @@ body {
     min-width: 100%;
   }
   .drone .sd-card {
-    flex-grow: 1;
+    width: calc(50% - 2px);
   }
 
   /* depot */
